antrea/network-policies/acnp_aislamiento-completo.yaml

# CONFINAMIENTO EN NAMESPACE
apiVersion: crd.antrea.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: aislamiento-completo
spec:
  priority: 5
  tier: securityops
  appliedTo:
    - podSelector:
        matchLabels:
          seguridad: aislamiento-completo
  ingress:
    - action: Drop
      enableLogging: true
      logLabel: "aislamiento-completo-ingress"
  egress:
    - action: Drop
      enableLogging: true
      logLabel: "aislamiento-completo-egress"
