antrea/network-policies/acnp_solo-detectar.yaml
#  SOLO DETECTAR + REGISTRO --> Allow + Registro
apiVersion: crd.antrea.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: detectar-registro
spec:
  priority: 15
  tier: securityops
  appliedTo:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          seguridad: detectar-registro
  ingress:
    - action: Allow
      enableLogging: true
      logLabel: "deteccion-registro-ingress"
  egress:
    - action: Allow
      enableLogging: true
      logLabel: "deteccion-registro-egress"
